--- a/api/components/enum/index.yaml
+++ b/api/components/enum/index.yaml
@@ -1,95 +1,3 @@
-search:
-  context: &context
-    $ref: "./context.yaml"
-  message: 
-    intent:
-      category: &category
-        $ref: "./category.yaml"
-on_search:
-  context: *context
-  message:
-    catalog:
-      providers:
-        categories: *category
-        items: &items
-          $ref: './item.yaml'      
-select:
-  context: *context
-  message: 
-    order: &order
-      items: *items
-on_select:
-  context: *context
-  message:
-    order: 
-      <<: *order
-      quote: &quote
-        $ref: './quote.yaml'
-init:
-  context: *context
-  message:
-    order:
-      items: *items
-      payments: &payment 
-        $ref: './payment.yaml'
-      quote: *quote
-on_init:
-  context: *context
-  message:
-    order:
-      items: *items
-      payments: *payment
-      quote: *quote
-confirm:
-  context: *context
-  message: 
-    order: *order
-on_confirm:
-  context: *context
-  message:
-    order:
-      items: *items
-      fulfillments: &fulfillments
-        $ref: './fulfillment.yaml'  
-      payments: *payment
-      documents: &document
-        $ref: './documents.yaml'
-      cancellation_terms:
-        fulfillment_state:
-          $ref: './cancellation_terms.yaml'
-      quote: *quote       
-status:
-  context: *context
-on_status:
-  context: *context
-  message:
-    order:
-      items: *items
-      fulfillments: *fulfillments
-      payments: *payment
-      documents: *document
-      quote: *quote
-cancel:
-  context: *context
-on_cancel:
-  context: *context
-  message:
-    order:
-      items: *items
-      payments: *payment
-      documents: *document
-      quote: *quote
-update:
-  context: *context
-  message:
-    order:
-      payments: *payment
-on_update:
-  context: *context
-  message: 
-    order:
-      items: *items
-      fulfillments: *fulfillments
-      payments: *payment
-      documents: *document
-      quote: *quote 
+default:
+  enum_set:
+    $ref: ./default/index.yaml
