--- a/api/components/attributes/index.yaml
+++ b/api/components/attributes/index.yaml
@@ -1,9 +1,9 @@
-health-insurance: 
+health-insurance:
   attribute_set:
-    $ref: './health-insurance/index.yaml'
-motor-insurance: 
+    $ref: ./health-insurance/index.yaml
+marine-insurance:
   attribute_set:
-    $ref: './motor-insurance/index.yaml'  
-marine-insurance: 
+    $ref: ./marine-insurance/index.yaml
+motor-insurance:
   attribute_set:
-    $ref: './marine-insurance/index.yaml'
+    $ref: ./motor-insurance/index.yaml
