--- a/api/components/examples/index.yaml
+++ b/api/components/examples/index.yaml
@@ -2,15 +2,14 @@ health-insurance:
   summary: health-insurance
   description: health-insurance
   example_set:
-    $ref: "./health-insurance/health-insurance.yaml"
+    $ref: ./health-insurance/index.yaml
 marine-insurance:
   summary: marine-insurance
   description: marine-insurance
   example_set:
-    $ref: "./marine-insurance/marine-insurance.yaml"
-
+    $ref: ./marine-insurance/index.yaml
 motor-insurance:
   summary: motor-insurance
   description: motor-insurance
   example_set:
-    $ref: "./motor-insurance/motor-insurance.yaml"
+    $ref: ./motor-insurance/index.yaml
